Fix overflow issue

--- a/src/pages/ConsolePage.scss
+++ b/src/pages/ConsolePage.scss
@@ -8,7 +8,6 @@
   flex-direction: column;
   overflow: hidden;
   margin: 0px 8px;
-  padding-bottom: 8px;
   & > div {
     flex-shrink: 0;
   }
